--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -151,6 +151,10 @@
         backdrop-filter: blur(12px);
         box-shadow: 0px 4px 10px -10px var(--black);
 
+        .switch-btn {
+            margin-bottom: 1rem;
+        }
+
         .item {
             @include scale(1);
         }
